feat: Update global styles and fonts
- Update global styles in globals.css to use Tailwind CSS utilities
- Update font imports in layout.tsx to use Next.js font packages
- Update metadata in layout.tsx and page.tsx to use app-specific configuration
- Remove unnecessary code and elements from page.tsx
- Add config file

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,39 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer base {
+  * {
+    @apply box-border;
   }
-}
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
+  html,
+  body {
+    @apply h-full w-full;
+  }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  html {
+    @apply text-base font-[family-name:var(--font-open-sans)];
+  }
+
+  body {
+    @apply bg-background text-foreground antialiased;
+  }
+
+  h1,
+  h2,
+  h3 {
+    @apply font-[family-name:var(--font-montserrat-alternates)];
+  }
+
+  h1 {
+    @apply text-2xl md:text-4xl font-bold;
+  }
+
+  h2 {
+    @apply text-xl md:text-2xl font-semibold;
+  }
+
+  h3 {
+    @apply text-base md:text-xl font-semibold;
   }
 }
