--- a/app/globals.css
+++ b/app/globals.css
@@ -79,7 +79,10 @@
 
   h1,
   h2,
-  h3 {
+  h3,
+  h4,
+  h5,
+  h6 {
     @apply font-[family-name:var(--font-montserrat-alternates)];
   }
 
@@ -92,6 +95,18 @@
   }
 
   h3 {
-    @apply text-base md:text-xl font-semibold;
+    @apply text-lg md:text-xl font-semibold;
+  }
+
+  h4 {
+    @apply text-base md:text-lg;
+  }
+
+  h5 {
+    @apply text-sm md:text-base;
+  }
+
+  h6 {
+    @apply text-xs md:text-sm;
   }
 }
